# solo_leveling_bot

./: Cargo.toml
.github/workflows/: deploy-arm.yml
logs/: app.log.2026-02-08  app.log.2026-02-15  app.log.2026-03-08
migrations/: 20260212101319_create_users_table.up.sql  20260212102406_create_traning_table.down.sql  20260212102406_create_traning_table.up.sql  20260212103550_create_exercises_table.down.sql  20260212103550_create_exercises_table.up.sql
src/: commands.rs  database.rs  experience.rs  handlers.rs  keyboards.rs  main.rs  messages.rs  states.rs  time.rs
src/texts/: awaiting_input_to_fetch_best_set.txt  best_set.tera  best_set_not_found.tera  cancel_completing.txt  cancel_delete.txt  change_exercise.tera  complete_empty_training.txt  completing_training.txt  confirm_action.txt  delete_empty_training.txt  delete_last_exercise.tera  elapsed_time.tera  empty_training.txt  exercise_name_to_long.txt  exercise_selected.tera  get_journal.tera  greetings.tera  no_found_history.txt  no_set_to_delete.txt  not_found_training.txt  reps_completed.tera  start_training.tera  success_delete.txt  user_progress.tera  weight_or_reps_to_high.txt  wrong_format.tera
src/texts/logs/: app.log.2026-02-15
