[package]
name = "test_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15.0"
teloxide = { version = "0.12", default-features = false, features = ["rustls", "macros", "ctrlc_handler", "throttle"] }
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = "0.4.43"
